# data-cleaning-agentic-workflow

./: CLAUDE.md  README.md  claude.md  pyproject.toml
.claude/skills/: clean_data.md  duplicate_detection.md  feature_leakage.md  missingness.md  outlier_detection.md  tidy_notebook.md  type_consistency.md
.claude/skills/clean_data/: SKILL.md
.claude/skills/explore_db/: SKILL.md
database/: insert-data-into-postgres-db.py
notebooks/: cleaning.ipynb
notebooks/configs/: cleaning_config.yaml
notebooks/data/: demo_issues.json
